--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,24 +1,24 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Aluguéis de Carros
+      Carros 
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <!-- Corpo da página-->
-<ion-content padding >
+<ion-content  class="background" padding >
   <!-- agrupa os itens da lista-->
  <ion-list>
 
   <ion-item-group>
     <ion-item-divider color="light">
-      <ion-icon name="checkmark-circle"></ion-icon>
         Carros Disponíveis
+        <ion-icon name="checkmark-circle"></ion-icon>
       
     </ion-item-divider>
     <ion-item *ngFor="let carro of carros" (click)="selecionaCarro(carro)">
-      <h2><ion-icon name="car-outline"></ion-icon>
+      <h2><ion-icon name="ios-car-outline"></ion-icon>
         {{carro.nome}}</h2>
       <p>R$ {{carro.preco}}</p>
     </ion-item>
