--- a/src/pages/lista-agendamentos/lista-agendamentos.html
+++ b/src/pages/lista-agendamentos/lista-agendamentos.html
@@ -2,7 +2,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Agendamentos</ion-title>
+    <ion-title>Todos agendamentos</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -12,6 +12,12 @@
   <ion-list>
     <ion-item [class.falha]= "!agendamento.enviado" *ngFor="let agendamento of agendamentos">
       {{ agendamento.nomeCliente}} - {{agendamento.modeloCarro}}
+
+      <button ion-button item-end icon-only clear 
+      *ngIf="!agendamento.enviado" 
+      (click)="reenvia(agendamento)">
+        <ion-icon name="refresh"></ion-icon>
+      </button>
     </ion-item>
   </ion-list>
 
