--- a/src/pages/lista-agendamentos/lista-agendamentos.html
+++ b/src/pages/lista-agendamentos/lista-agendamentos.html
@@ -13,10 +13,12 @@
     <ion-item [class.falha]= "!agendamento.enviado" *ngFor="let agendamento of agendamentos">
       {{ agendamento.nomeCliente}} - {{agendamento.modeloCarro}}
 
-      <button ion-button item-end icon-only clear 
-      *ngIf="!agendamento.enviado" 
-      (click)="reenvia(agendamento)">
+      <button ion-button item-end icon-only clear *ngIf="!agendamento.enviado" (click)="reenvia(agendamento)">
         <ion-icon name="refresh"></ion-icon>
+      </button>
+
+      <button ion-button item-end icon-only clear (click)="excluiAgendamento(agendamento)">
+        <ion-icon name="trash"></ion-icon>
       </button>
     </ion-item>
   </ion-list>
