--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -16,7 +16,7 @@
 
     <ion-item-group>
       <ion-item-divider color="light">
-        Carros Disponíveis
+        Carros disponíveis
         <ion-icon name="checkmark-circle"></ion-icon>
 
       </ion-item-divider>
