--- a/src/pages/cadastro/cadastro.html
+++ b/src/pages/cadastro/cadastro.html
@@ -13,20 +13,20 @@
 
   <form (ngSubmit)= "agenda()" #formulario="ngForm">
     <ion-item>
-      <ion-label stacked>Nome:</ion-label>
+      <ion-label stacked>{{ 'CADASTRO.nome' | translate }}</ion-label>
       <ion-input [(ngModel)]="nome" name="nome"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label stacked>Endereço:</ion-label>
+      <ion-label stacked>{{ 'CADASTRO.endereco' | translate }}</ion-label>
       <ion-input [(ngModel)]="endereco" name="endereco"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label stacked>Email:</ion-label>
+      <ion-label stacked>{{ 'CADASTRO.email' | translate }}</ion-label>
       <ion-input [(ngModel)]="email" name="email"></ion-input>
     </ion-item>
 
     <ion-item (click)="selecionaData()">
-      <ion-label stacked>Data:</ion-label>
+      <ion-label stacked>{{ 'CADASTRO.data' | translate }}</ion-label>
       <ion-datetime disabled="true" [(ngModel)]="data" name="data" displayFormat="DD/MM/YY"></ion-datetime>
     </ion-item>
   </form>
