--- a/src/pages/cadastro/cadastro.html
+++ b/src/pages/cadastro/cadastro.html
@@ -1,7 +1,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Cadastro</ion-title>
+    <ion-title>{{ 'CADASTRO.cadastro' | translate}}</ion-title>
   </ion-navbar>
 
 </ion-header>
